--- a/spring/pattern_recognition/notes/intro.tex
+++ b/spring/pattern_recognition/notes/intro.tex
@@ -202,5 +202,7 @@ the design looked quite nice and wanted to give it a shot!
 	Previously, there had just been one variable we were trying to identify, we were only making a single
 	observation. This observation was the sum of the parameters $w$ and the $\phi(x_{n})$. However, if we 
 	keep mulitple basis functions(why do that?), then we could just have a similar process but instead store
-	all the relevant info in a giant matrix $W$.
+	all the relevant info in a giant matrix $W$, where each of the $M$ rows are a basis function and K
+	columns are the number of the target value.
+
 \end{document}
