presentation taking form

--- a/spring/entrepeneurship/presentation/0616110_presentation.tex
+++ b/spring/entrepeneurship/presentation/0616110_presentation.tex
@@ -2,39 +2,50 @@
 
 %credit to the devs of the metropolis theme
 \usetheme{metropolis}
+
 \title{Digital Transformation: Improving the Odds of success}
-\author{Andres Ponce}
-\institute{National Chiao Tung University}
+
+\author{Andres Ponce(彭思安)}
+
+
+\institute{National Chiao 你Tung University}
 
 \begin{document}
 \maketitle
-`	\begin{frame}
-		\frametitle{Outline}
-		\tableofcontents
-	\end{frame}
-	
 
-	%introduce the problem	
-	\section{Introduction}
-	\begin{frame}{Introduction}
-		Currently, the chance of meeting profit expectations by 
-		integrating advanced technologies is quite low. 	
+\begin{frame}
+	\frametitle{Introduction}
+	For some select companies, up to 80\% of their revenue comes
+	from digital avenues.\pause
 
-		According to McKinsey, only 45\% of companies that try to
-		bring in digital technologies surpass their profit expectation.
+	However, making the ``digital transformation" can make the company 
+	actually deliver less profit(up to 45\% less).\pause
 
-		How do we change that?	
-	\end{frame}
+	What can you do to increase the chances of success when going digital?
+\end{frame}
 
-	\section{Suggestions}
-	%%%outline frame
-	\begin{frame}{Problem}
-		What can companies do to maximize their chances
-		for success in becoming digital?
-		\begin{itemize}
-			\item{Laying Out clear Priorities}
-			\item{Hiring talent at the top}
-		\end{itemize}
-	\end{frame}
-	
-	\end{document}
+\begin{frame}
+	\frametitle{Two things to do}
+		\begin{enumerate}
+			\item{\textbf{Laying out clear priorities}}\pause
+			\item{\textbf{Investing in talent}}
+		\end{enumerate}
+\end{frame}
+
+\section{Laying Out Clear Priorities}
+\begin{frame}
+	\frametitle{Laying Out Clear Priorities}
+	When the executives have a clear vision, there appears
+	to be a higher likelihood of success.\pause
+
+	People need to know what they are working for in order to 
+	do it effectively.
+\end{frame}
+
+\section{Investing in Talent}
+\begin{frame}
+	\frametitle{Investing in Talent}
+	Invest in talent, especially at the top fam.
+\end{frame}
+
+\end{document}
