--- a/spring/pattern_recognition/homework/HW1/report/report.tex
+++ b/spring/pattern_recognition/homework/HW1/report/report.tex
@@ -17,9 +17,12 @@
 		we observe that the selected fruit is in fact an apple, what is the probability
 		that it came from the blue box?}
 
-		First, let $a$ represent the event of selecting an apple, and $B$ be 
-		the event of choosing a fruit from the blue box.
-
+		For the second question, let $a$ be the event of choosing an apple.We are trying to find the 
+		probability that the apple comes from the blue box, or $p(a|b)$. However, we can
+		use \textbf{Baye's Theorem} to calculate the probability. This theorem says 
+		\[p(a|b) = \frac{p(b|a)p(a)}{p(b)} \]
+		We are told that $p(B) = 0.4$,
+		
 	\item
 		\textbf{Using the definition} \[\textrm{var}[f] = E[(f(x) - E[f(x)])^{2}] \]
 		\textbf{show that $\textrm{var}[f(x)]$ satisfies}
