--- a/spring/pattern_recognition/homework/HW1/report/report.tex
+++ b/spring/pattern_recognition/homework/HW1/report/report.tex
@@ -10,8 +10,8 @@
 \maketitle
 
 \section{Program Report} %%tentative section name
-\begin{enumerate}
-		\item \textbf{Plot the learning curve of the training, you should 
+
+		\subsection{Plot the learning curve of the training, you should 
 				find that loss decreases after a few iterations 
 				(x-axis=iteration,y-axis=loss, Matplotlibor other plot tools is available to use)}
 
@@ -28,15 +28,15 @@
 					\end{subfigure}
 				\end{figure}
 
-		\item \textbf{What's the Mean Square Error of your prediction and ground truth
+		\subsection{What's the Mean Square Error of your prediction and ground truth
 				(prediction=model(x\_test),ground truth = y\_test)}
 
-		\item \textbf{What're the weights and intercepts of your linear model?}
+		\subsection{What're the weights and intercepts of your linear model?}
 
 				For the testing data, we got about 0.719 for our slope and 0.635 for our 
 				y-intercept.
 
-		\item \textbf{What's the difference between the Gradient Descent, Mini-Batch Gradient
+		\subsection{What's the difference between the Gradient Descent, Mini-Batch Gradient
 				Descent, and Stochastic Gradient Descent?}
 				
 				Gradient Descent seeks to find the minimum to a function. To do this, at each 
@@ -55,12 +55,18 @@
 				for some applications in big data, this tradeoff might be worth it.
 
 				There exists another approach to the gradient, used in \textbf{mini-batch gradient descent}.
+				Here, we only consider a small portion of the training set in  order to make a calculation
+				on how to proceed. Since stochastic gradient descent might update the parameters in a noisy 
+				manner, mini-batch might present a better alternative for the gradient computation.
 
-\end{enumerate}
+				In the end however, all three methods have the goal of minimizing the function to find the 
+				correct parameters, with compromises of speed and accuracy.
+
+
 \section{Questions}
-\begin{enumerate}
-	\item 
-		\textbf{Suppose that we have three colored boxes $R$ (red), $B$ (blue),
+
+
+		\subsection{Suppose that we have three colored boxes $R$ (red), $B$ (blue),
 				and $G$ (green). Box $R$ contains 3 apples, 4 oranges, and 3 guavas,
 				box $B$ contains 2 apples, 0 oranges, and 2 guavas, and box $G$ contains
 				12 apples, 4 oranges, and 4 guavas. If a box is chosen at random with 
@@ -90,10 +96,10 @@
 				\[ p(B|a) = \frac{(.5)(.4)}{(.5)} = .4\]
 
 
-		\item
-		\textbf{Using the definition} \[\textrm{var}[f] = E[(f(x) - E[f(x)])^{2}] \]
-		\textbf{show that $\textrm{var}[f(x)]$ satisfies}
-		\[\textrm{var}[f(x)] = E[f(x)^{2}] - E[f(x)]^{2}\]
+		\subsection{Using the definition \[\textrm{var}[f] = E[(f(x) - E[f(x)])^{2}] \]
+		 show that $\textrm{var}[f(x)]$ satisfies
+		\[\textrm{var}[f(x)] = E[f(x)^{2}] - E[f(x)]^{2}\]}
+		
+		First, we write the 
 
-\end{enumerate}
 \end{document}
