added updated description on testing data in report

--- a/spring/pattern_recognition/homework/HW1/report/report.tex
+++ b/spring/pattern_recognition/homework/HW1/report/report.tex
@@ -16,7 +16,11 @@
 				(x-axis=iteration,y-axis=loss, Matplotlibor other plot tools is available to use)}
 
 				For this assignment, we plotted both the actual regression function and the error
-				for each iteraiton of the training and test data sets.
+				for each iteraiton of the training and test data sets. For the original testing, 
+				the number of iterations was 100, however, after about 200 iterations, the error
+				does not decrease as much. \texttt{main.py} by default runs 1000 iterations for a 
+				more accurate result.
+
 				%the !ht places the figures in the actual place in the file
 				\begin{figure}[!ht]
 					\centering
