--- a/spring/pattern_recognition/homework/HW1/report/report.tex
+++ b/spring/pattern_recognition/homework/HW1/report/report.tex
@@ -35,9 +35,11 @@
 		\subsection{What's the Mean Square Error of your prediction and ground truth
 				(prediction=model(x\_test),ground truth = y\_test)}
 
+				The error for the testing data  is around 0.26, an around 0.06 for 
+				the testing data.
 		\subsection{What're the weights and intercepts of your linear model?}
 
-				For the testing data, we got about 0.719 for our slope and 0.635 for our 
+				For the testing data, we got about 0.817 for our slope and 0.784 for our 
 				y-intercept.
 
 		\subsection{What's the difference between the Gradient Descent, Mini-Batch Gradient
